[feat] block 구조 변경